--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
