--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
@@ -22,7 +23,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "routes": "^2.1.0",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
